--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -66,13 +66,20 @@ title = {{Electric Field Imaging}},
 year = {1999}
 }
 @article{Smith1996,
-author = {Smith, J R},
-file = {:C$\backslash$:/Users/tgpuppen/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Smith - 1996 - Field mice Extracting hand geometry from electric field measurements.pdf:pdf},
-journal = {Group},
-title = {{Field mice : Extracting hand geometry from electric field measurements}},
-volume = {35},
-year = {1996}
-}
+	author = {Smith, J. R.},
+	title = {Field Mice: Extracting Hand Geometry From Electric Field Measurements},
+	journal = {IBM Syst. J.},
+	issue_date = {1996},
+	volume = {35},
+	number = {3-4},
+	month = {Sep},
+	year = {1996},
+	issn = {0018-8670},
+	pages = {587--608},
+	numpages = {22},
+	publisher = {IBM Corp.},
+	address = {Riverton, NJ, USA},
+} 
 @article{Wimmer2007,
 author = {Wimmer, Raphael and Kranz, Matthias and Boring, Sebastian and Schmidt, Albrecht},
 doi = {10.1109/PERCOM.2007.1},
@@ -285,4 +292,18 @@ year = {2007}
 	pages={88--97},
 	publisher = {IEEE Computer Society},
 	address = {Washington, DC, USA},
+}
+
+@incollection{brezmes2009activity,
+   author = {Brezmes, Tomas and Gorricho, Juan-Luis and Cotrina, Josep},
+   affiliation = {France Telecom R+D, Spain},
+   title = {Activity Recognition from Accelerometer Data on a Mobile Phone},
+   booktitle = {Distributed Computing, Artificial Intelligence, Bioinformatics, Soft Computing, and Ambient Assisted Living},
+   series = {Lecture Notes in Computer Science},
+   editor = {Omatu, Sigeru and Rocha, Miguel and Bravo, José and Fernández, Florentino and Corchado, Emilio and Bustillo, Andrés and Corchado, Juan},
+   publisher = {Springer Berlin / Heidelberg},
+   keyword = {Computer Science},
+   pages = {796--799},
+   volume = {5518},
+   year = {2009}
 }
