--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -196,7 +196,7 @@ In the following, the test persons were supposed to lay down on the couch. Again
 	\label{fig:eugen_5}
 \end{figure}
 
-Figure \ref{fig:eugen_5} shows an example instance of preparing a bread with marmelade. It is notable that the acceleration data does not seem to provide any characteristic patterns, while the proximity sensor indicates a table, plate, or other objects in immediate distance. This activity showed a high improvement in the average f-measure by 10 \%, from 49.0 \% to 59.8 \%, when the capacitive proximity sensor is taken into account. 
+Figure \ref{fig:eugen_5} shows an example instance of preparing a bread with marmelade. It is notable that the acceleration data does not seem to provide any characteristic patterns, while the proximity sensor indicates a table, plate, or other objects in immediate distance. This activity showed a high improvement in the average f-measure by 10 \%, from 49.0 \% to 59.8 \%, when the data delivered by the capacitive proximity sensor is taken into account. 
 
 \begin{figure}[htpb]
 	\centering
@@ -207,7 +207,6 @@ Figure \ref{fig:eugen_5} shows an example instance of preparing a bread with mar
 
 Considering the eating activity, the influence of the capacitive proximity sensor is very low. Some of the participants ate their bread leaving their hand close to the mouth, while others moved their hand up and down putting their bread aside on the plate. A good example of an eating activity is shown in Figure \ref{fig:eugen_6} where the participant took a few bites from the bread. The average f-measure for that activity increased slightly from 80.3 \% to 83.8 \%. 
 
-<<<<<<< HEAD
 \begin{figure}[htpb]
 	\centering
 		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_7.pdf}
@@ -215,7 +214,7 @@ Considering the eating activity, the influence of the capacitive proximity senso
 	\label{fig:eugen_7}
 \end{figure}
 
-The activity drinking water is depicted in Figure \ref{fig:eugen_7}. The participant took five nips from the glass, while leaving the hands lying on the table in between. These motions can be easily detected in the acceleration as well as proximity data. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table.
+The activity drinking water is depicted in Figure \ref{fig:eugen_7}. The participant took a few nips from the glass, while leaving the hands lying on the table in between. These motions can be easily detected in the acceleration as well as proximity data. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table.
 
 \begin{figure}[htbp]
 	\centering
@@ -235,7 +234,6 @@ Regarding the walking activity one can identify periodic changes in the accelera
 =======
 \subsection{Evaluation Results}
 \label{sect:evaluation}
->>>>>>> bc6d4fcb6021ed9fa82fe92161cf6842c10d0386
 
 The sleeping activity was captured with an average f-measure of 83.4 \% that increased to 88.4 \% when using the capacitive proximity sensor. In this situation the capacitive proximity sensor is able to capture the surrounding couchons and blankets. The accelerometer data and the proximity data is very constant during that activity. 
 
