recent changes to the paper

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -307,3 +307,9 @@ year = {2007}
    volume = {5518},
    year = {2009}
 }
+
+@misc{hedgehog,
+  title = {{HedgeHog} activity logger},
+  howpublished = {\url{http://www.ess.tu-darmstadt.de/hedgehog}},
+  note = {Accessed: 17-06-2012}
+}
