added confusion matrix

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -296,15 +296,28 @@ The sleeping activity (an example shown in Figure \ref{fig:sleeping}) was classi
 % 		0 & 8 & 3 & 0 & 6 & 4 & \textbf{67} & 0 & 1 	&& 0 & 8 & 4 & 2 & 1 & 5 & \textbf{68} & 0 & 0 		&& g = drinking		\\
 % 		1 & 0 & 0 & 1 & 0 & 0 & 0 & \textbf{12} & 0 	&& 1 & 0 & 0 & 1 & 0 & 0 & 0 & \textbf{13} & 0 		&& h = walking		\\
 % 		0 & 1 & 2 & 10 & 6 & 1 & 1 & 0 & \textbf{312} 	&& 1 & 0 & 0 & 7 & 0 & 0 & 0 & 0 & \textbf{325} 	&& i = sleeping		\\ 
-		\textbf{11} & 0 & 5 & 4 & 1 & 0 & 0 & 0 & 0 	&& \textbf{17} & 0 & 0 & 2 & 0 & 0 & 0 & 0 & 0		&& a = open door    \\
-		0 & \textbf{136} & 8 & 1 & 11 & 0 & 0 & 0 & 0	&& 0 & \textbf{140} & 7 & 2 & 3 & 0 & 0 & 0 & 0		&& b = sitting      \\
-		4 & 20 & \textbf{151} & 1 & 7 & 2 & 1 & 1 & 0	&& 0 & 23 & \textbf{149} & 5 & 7 & 3 & 2 & 1 & 0	&& c = lying        \\
-		3 & 6 & 5 & \textbf{116} & 21 & 9 & 4 & 4 & 2	&& 1 & 1 & 9 & \textbf{129} & 25 & 4 & 2 & 4 & 1	&& d = get things   \\
-		0 & 5 & 2 & 5 & \textbf{81} & 11 & 2 & 0 & 0	&& 0 & 3 & 1 & 15 & \textbf{83} & 6 & 1 & 0 & 1		&& e = make bread   \\
-		0 & 0 & 0 & 0 & 9 & \textbf{167} & 19 & 0 & 3	&& 0 & 0 & 0 & 4 & 8 & \textbf{158} & 26 & 0 & 3	&& f = eating       \\
-		1 & 2 & 3 & 4 & 8 & 26 & \textbf{89} & 0 & 5	&& 0 & 0 & 8 & 5 & 5 & 29 & \textbf{92} & 1 & 4		&& g = drinking     \\
-		0 & 0 & 1 & 17 & 3 & 0 & 0 & \textbf{2} & 0		&& 0 & 1 & 2 & 10 & 3 & 0 & 0 & \textbf{9} & 0		&& h = walking      \\
-		0 & 0 & 0 & 2 & 0 & 8 & 2 & 0 & \textbf{78}		&& 0 & 0 & 0 & 2 & 0 & 6 & 1 & 0 & \textbf{81}		&& i = sleeping     \\ 
+% 	
+%		\textbf{11} & 0 & 5 & 4 & 1 & 0 & 0 & 0 & 0 	&& \textbf{17} & 0 & 0 & 2 & 0 & 0 & 0 & 0 & 0		&& a = open door    \\
+%		0 & \textbf{136} & 8 & 1 & 11 & 0 & 0 & 0 & 0	&& 0 & \textbf{140} & 7 & 2 & 3 & 0 & 0 & 0 & 0		&& b = sitting      \\
+%		4 & 20 & \textbf{151} & 1 & 7 & 2 & 1 & 1 & 0	&& 0 & 23 & \textbf{149} & 5 & 7 & 3 & 2 & 1 & 0	&& c = lying        \\
+%		3 & 6 & 5 & \textbf{116} & 21 & 9 & 4 & 4 & 2	&& 1 & 1 & 9 & \textbf{129} & 25 & 4 & 2 & 4 & 1	&& d = get things   \\
+%		0 & 5 & 2 & 5 & \textbf{81} & 11 & 2 & 0 & 0	&& 0 & 3 & 1 & 15 & \textbf{83} & 6 & 1 & 0 & 1		&& e = make bread   \\
+%		0 & 0 & 0 & 0 & 9 & \textbf{167} & 19 & 0 & 3	&& 0 & 0 & 0 & 4 & 8 & \textbf{158} & 26 & 0 & 3	&& f = eating       \\
+%		1 & 2 & 3 & 4 & 8 & 26 & \textbf{89} & 0 & 5	&& 0 & 0 & 8 & 5 & 5 & 29 & \textbf{92} & 1 & 4		&& g = drinking     \\
+%		0 & 0 & 1 & 17 & 3 & 0 & 0 & \textbf{2} & 0		&& 0 & 1 & 2 & 10 & 3 & 0 & 0 & \textbf{9} & 0		&& h = walking      \\
+%		0 & 0 & 0 & 2 & 0 & 8 & 2 & 0 & \textbf{78}		&& 0 & 0 & 0 & 2 & 0 & 6 & 1 & 0 & \textbf{81}		&& i = sleeping     \\ 
+
+		\textbf{8} & 0 & 0 & 0 & 0 & 0 & 0 & 2 & 1				&& \textbf{11} & 0 & 0 & 2 & 1 & 0 & 0 & 0 & 1 		&& a = open door	\\ 
+		0 & \textbf{140} & 0 & 5 & 2 & 0 & 0 & 0 & 0  		&& 0 & \textbf{140} & 0 & 5 & 2 & 0 & 0 & 0 & 0 	&&  b = sitting		\\ 
+		0 & 0 & \textbf{294} & 1 & 9 & 10 & 1 & 1 & 0 	 	&& 0 & 0 & \textbf{309} & 1 & 0 & 4 & 0 & 0 & 1 	&& c = lying		\\ 
+		1 & 7 & 1 & \textbf{50} & 17 & 9 & 1 & 4 & 1	 		&& 2 & 6 & 0 & \textbf{67} & 14 & 9 & 1 & 2 & 1 	&& d = get things	\\ 
+		0 & 2 & 7 & 7 & \textbf{102} & 42 & 5 & 0 & 2			&& 1 & 1 & 0 & 13 & \textbf{120} & 24 & 7 & 1 & 1 && e = make bread	\\ 
+		0 & 0 & 3 & 5 & 21 & \textbf{288} & 4 & 0 & 0 	 	&& 0 & 0 & 2 & 1 & 19 & \textbf{300} & 3 & 0 & 0 	&& f = eating		\\ 
+		0 & 5 & 11 & 1 & 29 & 40 & \textbf{18} & 0 & 0	 	&& 0 & 4 & 4 & 0 & 26 & 57 & \textbf{16} & 0 & 0	&& g = drinking		\\
+		2 & 0 & 0 & 2 & 0 & 0 & 0 & \textbf{11} & 0	 			&& 2 & 0 & 0 & 0 & 0 & 0 & 0 & \textbf{14} & 0 		&& h = walking		\\
+		0 & 2 & 2 & 0 & 2 & 0 & 0 & 0 & \textbf{271}			&& 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & \textbf{276} 		&& i = sleeping		\\ 
+
+
 		\cline{1-9} \cline{11-19} 
 % 		\bottomrule
 	\end{tabular}
